--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -7,6 +7,12 @@ edition = "2021"
 name = "6502-eater-none-javac"
 path = "src/main.rs"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[build-dependencies]
+cfgrammar = "0.13"
+lrlex = "0.13"
+lrpar = "0.13"
 
 [dependencies]
+cfgrammar = "0.13"
+lrlex = "0.13"
+lrpar = "0.13"
