--- a/compiler/Cargo.toml
+++ b/compiler/Cargo.toml
@@ -7,13 +7,14 @@ edition = "2021"
 name = "6502-eater-none-javac"
 path = "src/main.rs"
 
-[build-dependencies]
-cfgrammar = "0.13"
-lrlex = "0.13"
-lrpar = "0.13"
-
 [dependencies]
 cfgrammar = "0.13"
 getopts = "0.2"
+lrlex = "0.13"
+lrpar = "0.13"
+regex = "1"
+
+[build-dependencies]
+cfgrammar = "0.13"
 lrlex = "0.13"
 lrpar = "0.13"
