initial class loading support

--- a/libjava/Makefile
+++ b/libjava/Makefile
@@ -2,23 +2,23 @@ BIN_DIR ?= bin
 DOC_DIR ?= doc
 SRC_DIR := src
 
-CLASSPATH_FLAGS := -cp $(BIN_DIR)
+CLASSPATH_FLAGS := -cp $(BIN_DIR) -bootclasspath $(BIN_DIR)
 SOURCEPATH_FLAGS = -sourcepath $(SRC_DIR)
 
 JAVAC_FLAGS := -source 1.3 -target 1.1 -d $(BIN_DIR) $(SOURCEPATH_FLAGS)
-JAVADOC_FLAGS := -source 1.3 -d $(DOC_DIR) $(CLASSPATH_FLAGS) $(SOURCEPATH_FLAGS)
+JAVADOC_FLAGS := -source 1.3 -d $(DOC_DIR) $(SOURCEPATH_FLAGS)
 JAVA_FLAGS := $(CLASSPATH_FLAGS)
+
+.PHONY: all doc clean
 
 # Ensure the VM output directory exists
 all:
 	mkdir -p $(BIN_DIR)
-	javac $(JAVAC_FLAGS) $(SRC_DIR)/NET/_87k/fletch/vm/SoftCpu.java
-
-run:
-	java $(JAVA_FLAGS) NET._87k.fletch.vm.SoftCpu
+	javac $(JAVAC_FLAGS) @sources.txt
 
 doc:
-	javadoc $(JAVADOC_FLAGS) -private -subpackages NET._87k.fletch.vm
+	mkdir -p $(DOC_DIR)
+	javadoc $(JAVADOC_FLAGS) -private -subpackages java
 
 clean:
 	rm -rf $(BIN_DIR) $(DOC_DIR)
