--- a/libjava/Makefile
+++ b/libjava/Makefile
@@ -5,7 +5,7 @@ SRC_DIR := src
 CLASSPATH_FLAGS := -cp $(BIN_DIR) -bootclasspath $(BIN_DIR)
 SOURCEPATH_FLAGS = -sourcepath $(SRC_DIR) -bootclasspath $(BIN_DIR)
 
-JAVAC_FLAGS := -Xlint:-options -source 1.3 -target 1.1 -d $(BIN_DIR) $(SOURCEPATH_FLAGS)
+JAVAC_FLAGS := -g:none -Xlint:-options -source 1.3 -target 1.1 -d $(BIN_DIR) $(SOURCEPATH_FLAGS)
 JAVADOC_FLAGS := -source 1.3 -d $(DOC_DIR) $(SOURCEPATH_FLAGS)
 JAVA_FLAGS := $(CLASSPATH_FLAGS)
 
