transpose cargo/make builds

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
 resolver = "2"
 members = [
-    "ast", "empty", "hello", "javac65", "libjava", "parser",
+    "ast", "javac65", "parser"
 ]
