--- a/javac65/Cargo.toml
+++ b/javac65/Cargo.toml
@@ -9,4 +9,5 @@ path = "src/main.rs"
 
 [dependencies]
 fletch-parser = { path = "../parser" }
+fletch-type-checker = { path = "../type-checker" }
 getopts = "0.2"
